Rewrite re2c test runner in Python
This pull request introduces a completely rewritten test runner
in Python.

The main goals of this change:

- Provide a OS-independent way to run tests (at least using CMake)
- Getting rid of dependence on Unix utilities in tests
  (grep, cat, tr, etc.)
- Flexibility
- Ease of test runner maintenance

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -254,5 +254,5 @@ jobs:
 
           # skeleton tests (if enabled)
           if [[ "x${{ matrix.skeleton }}" == "xtrue" ]] ; then
-            ./run_tests.sh --skeleton
+            python run_tests.py --skeleton
           fi
