Remove verbose cmake option to speedup build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -243,7 +243,7 @@ jobs:
       - name: Full Build
         run: |
           find src -name '*.re' | xargs touch
-          cmake --build ${{ matrix.build-dir }} --config ${{ matrix.build-type }} --verbose
+          cmake --build ${{ matrix.build-dir }} --config ${{ matrix.build-type }}
 
       - name: Test
         if: startsWith(runner.os, 'Windows') == false
